# WhatsApp-assistant

./: .dockerignore  .gitignore  CNAME  Caddyfile  Dockerfile  README.md  app.py  config.py  context_generator.sh  demo.py  docker-compose.yml  email_notifier.py  gemini.md  index.html  pyproject.toml  requirements.txt  test-plan.md  twilio_whatsapp.py  whatsapp.py
Docker/: Dockerfile  build_and_push.sh  docker-compose.yml  docker_cleanup.sh  download_and_run.sh  rebuild_and_run.sh  test_build_local.sh
assistant/: assistant.py  session.py
config/: config.py  logging_config.py
contexts/: assistant_assets.json  prompt.txt  rules-backup.txt  rules.txt  treatments.json
data/: sessions.db
scripts/: docker_cleanup.sh  rebuild_and_run.sh
