[project]
name = "whatsapp-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "gunicorn>=25.0.0",
    "langchain>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "python-dotenv>=1.2.1",
    "resend>=2.21.0",
]
